tests/compiler/diagnostics-engine/parsing-errors/tests/multiple-errors/expected.txt
Error: Invalid class member declaration: found 'var'.
 --> Main.jack:2:5
   |
 2 |     var x, y;
   |     ^~~
Note: Expected a class variable or subroutine declaration.

Error: Missing variable name
 --> Main.jack:5:15
   |
 5 |         var xy;
   |               ^
Note: Perhaps you forgot to specify a type?
